--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,6 @@
     color: white;
   }
 
-  .container {
-    position: fixed;
-    top: 10px;
-    left: 50px;
-  }
-
   h1 {
     font-size: 28pt;
     margin-top: 10px;
@@ -36,4 +30,16 @@
 
   a:hover {
     font-weight: bold;
+  }
+
+  .container {
+    position: fixed;
+    top: 10px;
+    left: 50px;
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 10px;
+    left: 50px;
   }
